homepage and profile edits

--- a/views/homepage/homepage.ejs
+++ b/views/homepage/homepage.ejs
@@ -13,7 +13,7 @@
 			<div class="pink-background"></div>
 			<img class="imagekelas" src="https://user-images.githubusercontent.com/30113370/147396293-7e23d3f8-42ce-45bb-9ffe-a96752f2a1ec.png">
 
-			<div class="text-center">
+			<!-- <div class="text-center">
 				<ul class="list-inline">
 					<li class="list-inline-item">
 						<picture>
@@ -60,7 +60,7 @@
 						</picture>
 					</li>
 				</ul>
-			</div>
+			</div> -->
 		</div>
 
 		<div class="second-section">
