--- a/views/signup/signup-page.ejs
+++ b/views/signup/signup-page.ejs
@@ -26,7 +26,7 @@
 
 				<form class="form auth"><br>
 					<p class="field">
-						<input type="text" placeholder="Nama" id="name-input" required />
+						<input type="text" placeholder="Name" id="name-input" required />
 						<i class="fa fa-user"></i>
 					</p>
 					<p class="field">
@@ -34,11 +34,11 @@
 						<i class="fa fa-envelope"></i>
 					</p>
 					<p class="field">
-						<input type="text" placeholder="No Hp" id="phone-input" required />
+						<input type="text" placeholder="Phone Number" id="phone-input" required />
 						<i class="fa fa-mobile-phone" style="size: 152px;"></i>
 					</p>
 					<p class="field">
-						<input type="text" placeholder="Alamat" id="address-input" required />
+						<input type="text" placeholder="Address" id="address-input" required />
 						<i class="fa fa-location-arrow"></i>
 					</p>
 					<p class="field">
@@ -59,7 +59,7 @@
 					<script type="text/javascript">
 						document.write(new Date().getFullYear());
 					</script>
-					<a style="color: gold" href="" target="_blank"> Riferr </a>
+					<a style="color: gold" href="" target="_blank"> Hobbeer </a>
 				</p>
 			</div>
 		</div>
