--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-light navdef">
 	<!-- Brand Logo pada navbar -->
 	<div class="navbar-header">
-		<a href="/" class="navbar-brand mr-auto">Riferr</a>
-	</div>
+		<a href="/" class="navbar-brand mr-auto">Hobbeer</a>
+	</div> 
 
 	<!-- Toggler Button -->
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar"
