--- a/views/profile/profile-page.ejs
+++ b/views/profile/profile-page.ejs
@@ -25,7 +25,7 @@
 <body style="font-family: Chewy, cursive;">
 	<nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
 		<div class="container">
-			<a class="navbar-brand" href="/" style="font-family: Chewy, cursive; font-size: 32px;">Riferr</a>
+			<a class="navbar-brand" href="/" style="font-family: Chewy, cursive; font-size: 32px;">Hobbeer</a>
 			<button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="navbar-toggler-icon"></span>
@@ -122,7 +122,7 @@
 						<textarea type="text" name="desc" class="form-control" required></textarea>
 					</div>
 					<div class="form-group">
-						<label>Price (Rupiah)</label>
+						<label>Price</label>
 						<input type="text" class="form-control" name="price" required>
 					</div>
 					<div class="form-group">
