--- a/views/profile/seller-transactions-page.ejs
+++ b/views/profile/seller-transactions-page.ejs
@@ -25,7 +25,7 @@
 <body style="font-family: Chewy, cursive;">
 	<nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
 		<div class="container">
-			<a class="navbar-brand" href="/" style="font-family: Chewy, cursive; font-size: 32px;">Riferr</a>
+			<a class="navbar-brand" href="/" style="font-family: Chewy, cursive; font-size: 32px;">Hobbeer</a>
 			<button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="navbar-toggler-icon"></span>
