--- a/views/profile/settings-page.ejs
+++ b/views/profile/settings-page.ejs
@@ -17,7 +17,7 @@
 <body>
 	<nav class="navbar navbar-light navbar-expand-md navigation-clean">
 		<div class="container">
-			<a class="navbar-brand" href="/" style="font-family: Chewy, cursive; font-size: 32px;">Riferr</a>
+			<a class="navbar-brand" href="/" style="font-family: Chewy, cursive; font-size: 32px;">Hobbeer</a>
 			<button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label>Alamat</label>
+						<label>Address</label>
 						<input class="form-control" id="update-address" type="text" autocomplete="off" required="" name="address"
 							value="<%= address %>">
 					</div>
@@ -100,7 +100,7 @@
 
 	<footer id="footer">
 		<div style="background: black; text-align: center; margin: 0; padding:10px">
-			<p style="color:grey; font-family: Acme, sans-serif; font-size: 18px;">Copyright (c) 2019 Riferr</p>
+			<p style="color:grey; font-family: Acme, sans-serif; font-size: 18px;">Copyright (c) 2023 Hobbeer</p>
 		</div>
 	</footer>
 </body>
